--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,20 @@
   <script src="bundle.js" async></script>
 </head>
 <body>
-  <h1 data-controller="example"></h1>
+  
+  <div data-controller="clipboard">
+    PIN: <input data-clipboard-target="source" type="text" value="1234" readonly>
+    <button data-action="click->clipboard#copy">Copy to Clipboard</button>
+  </div>
+
+  <div data-controller="clipboard">
+    PIN: <textarea data-clipboard-target="source" readonly>3737</textarea>
+    <button data-action="clipboard#copy">Copy to Clipboard</button>
+  </div>
+
+  <div data-controller="clipboard">
+    PIN: <input data-clipboard-target="source" type="text" value="9837" readonly>
+    <a href="#" data-action="clipboard#copy">Copy to Clipboard</a>
+  </div>
 </body>
 </html>
