Slide show with setting the slide to 1

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <script src="bundle.js" async></script>
 </head>
 <body>
-  <div data-controller="slideshow">
+  <div data-controller="slideshow" data-index = "1">
     <button data-action="slideshow#previous"> ← </button>
     <button data-action="slideshow#next"> → </button>
   
