Asynchronously Loading HTML

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <script src="bundle.js" async></script>
 </head>
 <body>
-  <h1 data-controller="example"></h1>
+  <div data-controller="content-loader"
+  data-content-loader-url-value="/messages.html"></div>
 </body>
 </html>
