--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
   <div data-controller="content-loader"
-  data-content-loader-url-value="/messages.html"></div>
+     data-content-loader-url-value="/messages.html"
+     data-content-loader-refresh-interval-value="5000"></div>
+
 </body>
 </html>
