Using action parameters

--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
   <script src="bundle.js" async></script>
 </head>
 <body>
-  <div data-controller="content-loader"
-     data-content-loader-url-value="/messages.html"
-     data-content-loader-refresh-interval-value="5000"></div>
-
+  <div data-controller="content-loader">
+    <a href="#" data-content-loader-url-param="/messages.html" data-action="content-loader#load">Messages</a>
+    <a href="#" data-content-loader-url-param="/comments.html" data-action="content-loader#load">Comments</a>
+  </div>
 </body>
 </html>
